--- a/style.css
+++ b/style.css
@@ -20,9 +20,18 @@ body {
     background: white;
     border-radius: 50%;
     animation: twinkle 2s infinite alternate;
+    z-index: -5;
 }
 
 @keyframes twinkle {
-    0% { opacity: 0.1; }
-    100% { opacity: 1; }
+    0% { opacity: 0.1; transform: scale(0.8);}
+    100% { opacity: 1; transform: scale(1.3);}
+}
+
+.main-img {
+    margin-bottom: 15px;
+}
+
+.btn-row {
+    margin-top: 15px;
 }
